# NeriPlayer

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  README.md  README_EN.md  gradle.properties
.github/workflows/: android_ci.yml  android_native_ci.yml  debug_apk.yml  manual_release.yml  sync_upstream_release.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/: lib-decoder-ffmpeg-media3-1.8.0-ffmpeg-6.0-api28-common-release.aar
app/src/androidTest/java/moe/ouom/neriplayer/ui/: MiniPlayerPlaybackTransitionTest.kt  NeriAppNavigationIsolationTest.kt  NeriAppNavigationTransitionTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: advanced_glass_region_mask.agsl  hyper_background_effect.glsl
app/src/main/cpp/: CMakeLists.txt  README.md  usb_exclusive_bridge.cpp  usb_iso_packet_scheduler.h  usb_pcm_codec.cpp  usb_pcm_pipeline.cpp  usb_uac1_format.cpp
app/src/main/cpp/crash/: native_crash_handler.cpp
app/src/main/cpp/libusb/: version_describe.h
app/src/main/cpp/tests/: usb_pcm_pipeline_test.cpp  usb_uac1_format_test.cpp
app/src/main/cpp/tests/usb/: CMakeLists.txt  usb_assertions_enabled_test.cpp
app/src/main/cpp/tests/usb/config/: host-gate-contract.md  run-manifest.example.yaml  warning-baseline.txt
app/src/main/cpp/tests/usb/corpus/: README.md
app/src/main/cpp/tests/usb/exclusive/: usb_player_replay_buffer_test.cpp  usb_player_startup_preroll_test.cpp  usb_recovery_action_latch_test.cpp  usb_runtime_report_v2_test.cpp  usb_streaming_interface_lifecycle_test.cpp  usb_streaming_sync_policy_test.cpp
app/src/main/cpp/tests/usb/feedback/: usb_explicit_feedback_engine_test.cpp  usb_explicit_feedback_runtime_test.cpp  usb_feedback_ahead_window_test.cpp  usb_feedback_clock_test.cpp  usb_feedback_decoder_test.cpp  usb_feedback_estimator_test.cpp  usb_feedback_in_transfer_set_test.cpp  usb_feedback_packet_scheduler_test.cpp  usb_feedback_rate_math_test.cpp  usb_feedback_stream_gate_test.cpp  usb_feedback_trace_replay_test.cpp  usb_feedback_transfer_lifecycle_test.cpp
app/src/main/cpp/tests/usb/fixtures/: README.md
app/src/main/cpp/tests/usb/iso/: usb_iso_packet_scheduler_test.cpp  usb_iso_transfer_health_test.cpp  usb_iso_transfer_window_test.cpp
app/src/main/cpp/tests/usb/pcm/: usb_pcm_pipeline_test.cpp
app/src/main/cpp/tests/usb/uac1/: usb_uac1_format_test.cpp
app/src/main/cpp/tests/usb/uac2/: usb_uac2_candidate_model_test.cpp  usb_uac2_clock_graph_test.cpp  usb_uac2_descriptor_snapshot_test.cpp  usb_uac2_feedback_model_test.cpp  usb_uac2_feedback_profile_test.cpp  usb_uac2_format_test.cpp
app/src/main/cpp/usb/exclusive/: usb_exclusive_bridge.cpp  usb_player_replay_buffer.h  usb_player_startup_preroll.h  usb_recovery_action_latch.cpp  usb_recovery_action_latch.h  usb_runtime_report_v2.cpp  usb_runtime_report_v2.h  usb_streaming_interface_lifecycle.h  usb_streaming_sync_policy.h
app/src/main/cpp/usb/feedback/: usb_explicit_feedback_engine.cpp  usb_explicit_feedback_engine.h  usb_explicit_feedback_engine_state.cpp  usb_explicit_feedback_runtime.cpp  usb_explicit_feedback_runtime.h  usb_feedback_ahead_window.h  usb_feedback_clock.cpp  usb_feedback_clock.h  usb_feedback_decoder.cpp  usb_feedback_decoder.h  usb_feedback_estimator.cpp  usb_feedback_estimator.h  usb_feedback_in_transfer_set.cpp  usb_feedback_in_transfer_set.h  usb_feedback_packet_scheduler.cpp  usb_feedback_packet_scheduler.h  usb_feedback_rate_math.cpp  usb_feedback_rate_math.h  usb_feedback_stream_gate.cpp  usb_feedback_stream_gate.h  usb_feedback_transfer_lifecycle.cpp  usb_feedback_transfer_lifecycle.h  usb_feedback_types.cpp  usb_feedback_types.h  usb_libusb_feedback_backend.cpp  usb_libusb_feedback_backend.h
app/src/main/cpp/usb/iso/: usb_iso_transfer_health.h  usb_iso_transfer_window.h
app/src/main/cpp/usb/pcm/: usb_pcm_codec.cpp  usb_pcm_codec.h  usb_pcm_pipeline.cpp  usb_pcm_pipeline.h
app/src/main/cpp/usb/uac1/: usb_uac1_format.h
app/src/main/cpp/usb/uac2/: usb_uac2_candidate_model.cpp  usb_uac2_candidate_model.h  usb_uac2_clock_graph.cpp  usb_uac2_clock_graph.h  usb_uac2_descriptor_snapshot.cpp  usb_uac2_descriptor_snapshot.h  usb_uac2_feedback_model.cpp  usb_uac2_feedback_model.h  usb_uac2_feedback_profile.cpp  usb_uac2_feedback_profile.h  usb_uac2_format.cpp  usb_uac2_format.h
app/src/main/java/moe/ouom/neriplayer/: NeriPlayerApplication.kt
app/src/main/java/moe/ouom/neriplayer/activity/: MainActivity.kt
app/src/main/java/moe/ouom/neriplayer/listentogether/: ListenTogetherMapper.kt  ListenTogetherSessionCompatibility.kt  ListenTogetherSessionManager.kt
app/src/main/java/moe/ouom/neriplayer/navigation/: Destinations.kt
app/src/main/java/moe/ouom/neriplayer/ui/: MainTabLayerHost.kt  MainTabTransitionController.kt  NeriApp.kt
app/src/main/java/moe/ouom/neriplayer/util/: BackgroundBehaviorSettings.kt  ExceptionHandler.kt
app/src/main/res/drawable/: ic_launcher_adaptive_background.xml  ic_lyrics_24.xml  ic_lyrics_off_24.xml  ic_neriplayer_round.xml
app/src/main/res/values/: strings.xml  strings_local_media.xml  strings_playback.xml
app/src/main/res/values-en/: strings.xml  strings_local_media.xml  strings_playback.xml
app/src/test/java/moe/ouom/neriplayer/: ExampleUnitTest.kt
app/src/test/java/moe/ouom/neriplayer/data/: LocalMetadataCompatTest.kt  LocalSongAlbumIdentityTest.kt  SystemPlaylistIdentityTest.kt  YouTubeMusicSupportTest.kt
app/src/test/java/moe/ouom/neriplayer/listentogether/: ListenTogetherBaseUrlTest.kt  ListenTogetherEventCompatibilityTest.kt  ListenTogetherPlayerSyncPlannerTest.kt  ListenTogetherSessionManagerCancellationTest.kt  ListenTogetherSessionManagerControlTest.kt  ListenTogetherSessionManagerVersionGateTest.kt  ListenTogetherSessionPoliciesTest.kt  ListenTogetherValidationTest.kt
app/src/test/java/moe/ouom/neriplayer/ui/: NeriAppBottomBarLayoutPolicyTest.kt  NeriAppMainTabTransitionPolicyTest.kt  NeriAppNavigationIsolationPolicyTest.kt  (+2 more)
build-logic/convention/src/main/kotlin/: Common.kt  build-logic.android.application.gradle.kts
gradle/: libs.versions.toml
tools_pub/: usb-async-lab
(+744 files in other folders)
